--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -63,6 +63,10 @@
             background-color: $yellow;
         }
 
+        &.black{
+            background-color: #333333;
+        }
+
     }
 
     @include breakpoint(mobileonly) {
