--- a/sass/_quote.scss
+++ b/sass/_quote.scss
@@ -29,6 +29,20 @@
             margin-left: auto;
         }
 
+        &.border-bottom-yellow{
+            border-bottom:5px solid #f1ce00;
+        }
+
+        &.left-radius{
+            border-top-left-radius: 30%;
+            border-top-right-radius: 0;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+            margin-right: 35px;
+
+
+        }
+
         @include breakpoint(tabletup){
             // margin-top: 25%;
             // transform: translateY(-50%);
@@ -82,7 +96,7 @@
                 background-size: contain;
                 position: absolute;
                 top: 0;
-                left: 100px;
+                left: 105px;
                 font-size: 30px;
                 font-style: normal;
                 font-weight: 900;
